force-app/main/default/objects/Billing_Center_KPI_Config__c/Billing_Center_KPI_Config__c.object-meta.xml
<CustomObject>
    <description>Defines KPI cards shown on tabs or sections.</description>
    <label>Billing Center KPI Config</label>
    <nameField>
        <displayFormat>BCKPI-{00000}</displayFormat>
        <label>Billing Center KPI Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Center KPI Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>