force-app/main/default/objects/Billing_Center_KPI_Config__c/fields/Color_Key__c.field-meta.xml
<CustomField>
    <fullName>Color_Key__c</fullName>
    <label>Color Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>