force-app/main/default/objects/Billing_Center_KPI_Config__c/fields/Comparison_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comparison Enabled</label>
    <type>Checkbox</type>
</CustomField>