force-app/main/default/objects/Billing_Center_KPI_Config__c/fields/Comparison_Period_Type__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Period_Type__c</fullName>
    <label>Comparison Period Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Previous Day</fullName>
            </value>
            <value>
                <fullName>Previous Week</fullName>
            </value>
            <value>
                <fullName>Previous Month</fullName>
            </value>
            <value>
                <fullName>Previous Quarter</fullName>
            </value>
            <value>
                <fullName>Previous Year</fullName>
            </value>
            <value>
                <fullName>Matching Prior Period</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>