force-app/main/default/objects/Billing_Center_KPI_Config__c/fields/Dataset_Config__c.field-meta.xml
<CustomField>
    <fullName>Dataset_Config__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset Config</label>
    <referenceTo>Billing_Center_Dataset_Config__c</referenceTo>
    <relationshipLabel>Billing Center KPI Configs</relationshipLabel>
    <relationshipName>Billing_Center_KPI_Configs</relationshipName>
    <type>Lookup</type>
</CustomField>