force-app/main/default/objects/Billing_Center_KPI_Config__c/fields/Metric_Type__c.field-meta.xml
<CustomField>
    <fullName>Metric_Type__c</fullName>
    <label>Metric Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Count</fullName>
            </value>
            <value>
                <fullName>Sum</fullName>
            </value>
            <value>
                <fullName>Average</fullName>
            </value>
            <value>
                <fullName>Minimum</fullName>
            </value>
            <value>
                <fullName>Maximum</fullName>
            </value>
            <value>
                <fullName>Apex Handler</fullName>
            </value>
            <value>
                <fullName>Snapshot</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>